# mao

./: .gitignore  .mise.toml  .pre-commit-config.yaml  AGENT_LIFECYCLE_TESTING.md  CHANGELOG.md  CLAUDE.md  CTO_APPROVAL_WORKFLOW.md  DASHBOARD_DESIGN.md  DEVELOPMENT.md  DEVELOPMENT_RULES.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_TASKS.md  INTERACTIVE_MODE_QUICKREF.md  LICENSE  MANAGER_CTO_UNIFICATION.md  Makefile  QUICKSTART.md  README.md  RELEASING.md  TERMINOLOGY_UPDATE.md  TEST_RESULTS.md  TMUX_INTEGRATION_IMPLEMENTATION.md  TMUX_INTEGRATION_TEST_RESULTS.md  USAGE.md  install-local.sh  install.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  test_complete.py
.github/: RELEASE_TEMPLATE.md
.github/workflows/: tests.yml
.mao/: config.yaml
.mao/approval_queue/: 99f43541.json
.mao/coding_standards/: python_custom.md
.mao/context/: architecture.md
.mao/debug/: cto_response_20260202_084252.txt  cto_response_20260202_085027.txt  cto_response_20260202_085245.txt  cto_response_20260202_085528.txt  cto_response_20260202_090027.txt  cto_response_20260202_090311.txt  cto_response_20260202_090552.txt  cto_response_20260202_091116.txt  cto_response_20260202_091450.txt  cto_response_20260202_091802.txt  cto_response_20260202_092311.txt  cto_response_20260202_093521.txt  cto_response_20260202_094403.txt  cto_response_20260202_094732.txt  cto_response_20260202_102139.txt  cto_response_20260202_102214.txt  cto_response_20260202_104534.txt  cto_response_20260202_104628.txt  cto_response_20260202_104755.txt  cto_response_20260202_160303.txt  cto_response_20260202_160733.txt  cto_response_20260203_014218.txt  cto_response_20260203_014252.txt
.mao/skills/: commit.sh  commit.yaml  doc-track-add.yaml  doc-track-show.yaml  doc-track-start.yaml  doc-track-update.yaml  git-push.sh  git-push.yaml  mao-complete.yaml  mao-log.yaml  mao-register.yaml  mao-update-status.yaml  pr.yaml  spawn-agent.yaml  spawn-worker.yaml  tui-debug.yaml
approval_queue/: 245d7d82.json  index.json
docs/: API.md  ARCHITECTURE.md  CLAUDE_CODE_INTEGRATION.md  CODE_QUALITY.md  CODING_STANDARDS.md  CTO_ARCHITECTURE.md  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_SPECIFICATION.md  INTERACTIVE_MODE.md  INTERACTIVE_MODE_IMPLEMENTATION.md  README.md  REALTIME_LOGGING.md  SANDBOX.md  SHELL_COMPLETION.md  TAB_COMPLETION_SETUP.md  TMUX_ARCHITECTURE.md  WORKFLOW.md  WORKTREE_ISOLATION.md
examples/: README.md  error_handling.py  test_agent.py  test_agent_streaming.py  test_contact_api.py
frontend/: README.md  contact-form.html
mao/: __init__.py  __main__.py  cli.py  cli_completion.py  cli_feedback.py  cli_feedback_improve.py  cli_improvements.py  cli_project.py  cli_sandbox.py  cli_sessions.py  cli_shell_completion.py  cli_skills.py  cli_start.py  version.py
mao/agents/: cto_prompt.md  manager_prompt.md
mao/api/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  app.py  contact.py  models.py  storage.py
mao/config/: __init__.py  config_loader.py  defaults.yaml  pricing.yaml
mao/docker/: Dockerfile.mao-sandbox
mao/orchestrator/: agent_executor.py  agent_logger.py  agent_loop.py  agent_process.py  agent_streaming.py  approval_queue.py  claude_code_executor.py  cto_decision.py  cto_orchestrator.py  document_tracker.py  feedback_manager.py  improvement_manager.py  message_queue.py  project_loader.py  sandbox_manager.py  session_manager.py  skill_executor.py  skill_formatter.py  skill_manager.py  state_manager.py  task_decomposer.py  task_dispatcher.py  task_queue.py  task_reporter.py  tmux_executor.py  tmux_grid.py  tmux_manager.py  worker_loop.py  worktree_manager.py
mao/roles/: _mao_integration.md  cto.yaml  feedback_guidelines.md
mao/ui/: dashboard.py  dashboard_cto.py  dashboard_handlers.py  dashboard_interactive.py  dashboard_legacy_widgets.py  dashboard_parser.py  dashboard_spawner.py  dashboard_state.py
scripts/: check_code_quality.sh  check_mutable_defaults.py  generate_release_notes.py  setup_dev.sh  test_cto.py  test_cto_chat_widget.py  test_cto_integration.py  test_tmux_interactive.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: test_mao_commands.py
tests/integration/: test_full_workflow.py  test_interactive_mode.py
tests/unit/: test_agent_executor.py  test_applescript_injection.py  test_claude_code_executor_comprehensive.py  test_cli.py  test_config_files.py  test_config_loader.py  test_dashboard.py  test_error_handling.py  test_feedback_manager.py  test_message_queue.py  test_model_utils.py  test_progress_widgets.py  test_project_loader.py  test_security_config.py  test_session_manager.py  test_shell_injection.py  test_skill_formatter.py  test_skill_manager.py  test_state_manager.py  test_streaming.py  test_task_decomposition.py  test_task_dispatcher.py  test_task_dispatcher_communication.py  (+3 more)
(+39 files in other folders)
